testing the hosting

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,31 +1,57 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Primary Meta Tags -->
-    <title>MBSI – Solar, Car Tracking, CCTV & Smart Tech Services in Nigeria</title>
-    <meta name="description" content="MBSI provides affordable and reliable solar energy, GPS car tracking, CCTV installation, and smart tech solutions for homes, businesses, and governments across Nigeria. Book your service today.">
-    <meta name="keywords" content="MBSI, Car Tracking Nigeria, Solar Installation Nigeria, CCTV Security, GPS Tracker, Fleet Management, Off-grid Solar, Vehicle Monitoring, Smart Security, Renewable Energy Nigeria">
-    <meta name="author" content="MBSI – Magnificent Business Solutions International Limited">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
+    <title>
+      MBSI – Solar, Car Tracking, CCTV & Smart Tech Services in Nigeria
+    </title>
+    <meta
+      name="description"
+      content="MBSI provides affordable and reliable solar energy, GPS car tracking, CCTV installation, and smart tech solutions for homes, businesses, and governments across Nigeria. Book your service today."
+    />
+    <meta
+      name="keywords"
+      content="MBSI, Car Tracking Nigeria, Solar Installation Nigeria, CCTV Security, GPS Tracker, Fleet Management, Off-grid Solar, Vehicle Monitoring, Smart Security, Renewable Energy Nigeria"
+    />
+    <meta
+      name="author"
+      content="MBSI – Magnificent Business Solutions International Limited"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mbsi.ng/"> <!-- Replace with your domain -->
-    <meta property="og:title" content="MBSI – Solar, GPS Car Tracking & CCTV Solutions">
-    <meta property="og:description" content="Discover affordable tech solutions with MBSI. Track vehicles, install solar power, and secure your property with our smart services. Trusted nationwide.">
-    <meta property="og:image" content="https://www.mbsi.ng/preview.jpg"> <!-- Replace with a thumbnail image -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.mbsi.ng/" />
+    <!-- Replace with your domain -->
+    <meta
+      property="og:title"
+      content="MBSI – Solar, GPS Car Tracking & CCTV Solutions"
+    />
+    <meta
+      property="og:description"
+      content="Discover affordable tech solutions with MBSI. Track vehicles, install solar power, and secure your property with our smart services. Trusted nationwide."
+    />
+    <meta property="og:image" content="https://www.mbsi.ng/preview.jpg" />
+    <!-- Replace with a thumbnail image -->
 
-<!-- Twitter -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://www.mbsi.ng/">
-    <meta name="twitter:title" content="MBSI – Affordable Solar, Car Tracking & CCTV Services">
-    <meta name="twitter:description" content="Power your home, track your vehicle, and secure your property with MBSI’s trusted smart tech solutions. Serving all of Nigeria.">
-    <meta name="twitter:image" content="https://www.mbsi.ng/preview.jpg"> <!-- Replace with image URL -->
-
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.mbsi.ng/" />
+    <meta
+      name="twitter:title"
+      content="MBSI – Affordable Solar, Car Tracking & CCTV Services"
+    />
+    <meta
+      name="twitter:description"
+      content="Power your home, track your vehicle, and secure your property with MBSI’s trusted smart tech solutions. Serving all of Nigeria."
+    />
+    <meta name="twitter:image" content="https://www.mbsi.ng/preview.jpg" />
+    <!-- Replace with image URL -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <div id="root"></div>
