--- a/index.html
+++ b/index.html
@@ -56,5 +56,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script src="https://cdn.botpress.cloud/webchat/v3.0/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/07/01/11/20250701113738-CVTBE7MP.js"></script>
   </body>
 </html>
